# ocaml-cuckoofilter

./: README.md  cuckoo-filter.opam
lib/: .merlin  CuckooFilter.ml  bucket.ml  jbuild
test/: .merlin  cuckoo_test.ml  jbuild
